--- a/launchpad/base/src/main/resources/sling.properties
+++ b/launchpad/base/src/main/resources/sling.properties
@@ -127,9 +127,15 @@ org.osgi.framework.storage = ${sling.launchpad}/felix
 
  
 #
-# Default initial Framework start level 
+# Default initial framework start level 
 org.osgi.framework.startlevel.beginning=30
 
+# Install and update initial framework start level
+# This should be lower than the default initial framework start level
+# During an install or update, the framework starts with this level
+# and the startup manager increases the start level by one
+# until the initial framework start level is reached
+sling.framework.installstartlevel=10
 
 #
 # Default start level for newly installed bundles not explicitly assigned
@@ -158,7 +164,7 @@ org.osgi.framework.executionenvironment= \
 org.osgi.framework.system.packages= \
  ${osgi-core-packages}, \
  ${osgi-compendium-services}, \
- org.apache.sling.launchpad.api;version=1.0.0, \
+ org.apache.sling.launchpad.api;version=1.1.0, \
  ${jre-${java.specification.version}} \
  ${org.apache.sling.launcher.system.packages}
 
