--- a/bundles/auth/openid/pom.xml
+++ b/bundles/auth/openid/pom.xml
@@ -171,6 +171,10 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.felix</groupId>
+            <artifactId>org.apache.felix.scr.annotations</artifactId>
+        </dependency>
         
     </dependencies>
 </project>
