--- a/bundles/jcr/resource/pom.xml
+++ b/bundles/jcr/resource/pom.xml
@@ -205,7 +205,7 @@
         <dependency>
             <groupId>org.apache.sling</groupId>
             <artifactId>adapter-annotations</artifactId>
-            <version>1.0.1-SNAPSHOT</version>
+            <version>1.0.0</version>
             <scope>provided</scope>
         </dependency>
 
