--- a/bundles/extensions/adapter/pom.xml
+++ b/bundles/extensions/adapter/pom.xml
@@ -29,7 +29,7 @@
 
     <artifactId>org.apache.sling.adapter</artifactId>
     <packaging>bundle</packaging>
-    <version>2.0.10</version>
+    <version>2.0.11-SNAPSHOT</version>
 
     <name>Apache Sling Adapter Manager Implementation</name>
     <description>
@@ -39,9 +39,9 @@
     </description>
 
     <scm>
-        <connection>scm:svn:http://svn.apache.org/repos/asf/sling/tags/org.apache.sling.adapter-2.0.10</connection>
-        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/sling/tags/org.apache.sling.adapter-2.0.10</developerConnection>
-        <url>http://svn.apache.org/viewvc/sling/tags/org.apache.sling.adapter-2.0.10</url>
+        <connection>scm:svn:http://svn.apache.org/repos/asf/sling/trunk/bundles/extensions/adapter</connection>
+        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/sling/trunk/bundles/extensions/adapter</developerConnection>
+        <url>http://svn.apache.org/viewvc/sling/trunk/bundles/extensions/adapter</url>
     </scm>
 
     <properties>
