SLING-2376 : New Startup Features
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1236130 13f79535-47bb-0310-9956-ffa450edef68

--- a/launchpad/base/src/main/resources/sling.properties
+++ b/launchpad/base/src/main/resources/sling.properties
@@ -134,8 +134,9 @@ org.osgi.framework.startlevel.beginning=30
 # This should be lower than the default initial framework start level
 # During an install or update, the framework starts with this level
 # and the startup manager increases the start level by one
-# until the initial framework start level is reached
-sling.framework.installstartlevel=10
+# until the initial framework start level is reached.
+# sling.framework.install.incremental=true
+# sling.framework.install.startlevel=10
 
 #
 # Default start level for newly installed bundles not explicitly assigned
