[maven-release-plugin] prepare release org.apache.sling.commons.logservice-1.0.0
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1238552 13f79535-47bb-0310-9956-ffa450edef68

--- a/bundles/commons/logservice/pom.xml
+++ b/bundles/commons/logservice/pom.xml
@@ -28,7 +28,7 @@
     </parent>
 
     <artifactId>org.apache.sling.commons.logservice</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0.0</version>
     <packaging>bundle</packaging>
 
     <name>Apache Sling OSGi LogService Implementation</name>
@@ -38,9 +38,9 @@
     </description>
 
     <scm>
-        <connection>scm:svn:http://svn.apache.org/repos/asf/sling/trunk/bundles/commons/logservice</connection>
-        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/sling/trunk/bundles/commons/logservice</developerConnection>
-        <url>http://svn.apache.org/viewvc/sling/trunk/bundles/commons/logservice</url>
+        <connection>scm:svn:http://svn.apache.org/repos/asf/sling/tags/org.apache.sling.commons.logservice-1.0.0</connection>
+        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/sling/tags/org.apache.sling.commons.logservice-1.0.0</developerConnection>
+        <url>http://svn.apache.org/viewvc/sling/tags/org.apache.sling.commons.logservice-1.0.0</url>
     </scm>
     
     <build>
