--- a/launchpad/integration-tests/pom.xml
+++ b/launchpad/integration-tests/pom.xml
@@ -125,7 +125,7 @@
     <dependency>
       <groupId>org.apache.sling</groupId>
       <artifactId>org.apache.sling.commons.testing</artifactId>
-      <version>2.0.11-SNAPSHOT</version>
+      <version>2.0.10</version>
       <exclusions>
         <exclusion>
           <groupId>org.slf4j</groupId>
