--- a/pom.xml
+++ b/pom.xml
@@ -74,7 +74,8 @@
                         <DynamicImport-Package>*</DynamicImport-Package>
                         <Embed-Dependency>
                             org.apache.felix.framework;inline=org/**|META-INF/**,
-                            org.apache.felix.http.proxy;inline=org/apache/**
+                            org.apache.felix.http.proxy;inline=org/apache/**,
+                            org.apache.sling.launchpad.api;inline=org/apache/sling/launchpad/api/**
                         </Embed-Dependency>
                     </instructions>
                 </configuration>
@@ -105,20 +106,6 @@
                         </goals>
                         <configuration>
                             <includeArtifactIds>org.apache.sling.commons.osgi</includeArtifactIds>
-                            <excludeTransitive>true</excludeTransitive>
-                            <outputDirectory>
-                                ${project.build.directory}/classes
-                            </outputDirectory>
-                        </configuration>
-                    </execution>
-                    <!-- Embed code from launchpad.api -->
-                    <execution>
-                        <id>extract-sling-launchpad-api</id>
-                        <goals>
-                            <goal>unpack-dependencies</goal>
-                        </goals>
-                        <configuration>
-                            <includeArtifactIds>org.apache.sling.launchpad.api</includeArtifactIds>
                             <excludeTransitive>true</excludeTransitive>
                             <outputDirectory>
                                 ${project.build.directory}/classes
@@ -163,7 +150,6 @@
                             </archive>
                             <classifier>app</classifier>
                             <includes>
-                                <include>org/apache/sling/launchpad/api/**</include>
                                 <include>org/apache/sling/launchpad/base/shared/**</include>
                                 <include>org/apache/sling/launchpad/app/**</include>
                                 <include>org/apache/sling/commons/osgi/bundleversion/**</include>
@@ -194,7 +180,6 @@
                             <classifier>webapp</classifier>
                             <packagingIncludes>
                                 META-INF/**,
-                                WEB-INF/classes/org/apache/sling/launchpad/api/**,
                                 WEB-INF/classes/org/apache/sling/launchpad/base/shared/**,
                                 WEB-INF/classes/org/apache/sling/launchpad/webapp/**,
                                 WEB-INF/classes/org/apache/sling/commons/osgi/bundleversion/**,
