SLING-2352 Add JCR Repository registration module to reactor
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1333038 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -138,6 +138,7 @@
         <module>bundles/jcr/jackrabbit-accessmanager</module>
         <module>bundles/jcr/ocm</module>
         <module>bundles/jcr/resource</module>
+        <module>bundles/jcr/registration</module>
         <module>bundles/jcr/webdav</module>
         <module>bundles/jcr/davex</module>
         <module>bundles/jcr/webconsole</module>
