SLING-2463 Apply contributed Scripting Console (thanks Chetan Mehrotra)
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1333961 13f79535-47bb-0310-9956-ffa450edef68

--- a/contrib/pom.xml
+++ b/contrib/pom.xml
@@ -92,6 +92,7 @@
           <module>jcr/jackrabbit-client</module>
           <module>jcr/compiler</module>
           <module>jcr/prefs</module>
+          <module>scripting/console</module>
           <module>scripting/jsp-taglib-atom</module>
           <module>scripting/freemarker</module>
           <module>scripting/java</module>
