--- a/src/main/resources/sling.properties
+++ b/src/main/resources/sling.properties
@@ -183,6 +183,15 @@ org.osgi.framework.bootdelegation=com.yourkit.*, \
 # SLING-1925: boot delegate sun.reflect package 
 sling.bootdelegation.sun.reflect = sun.reflect
 
+# JBoss XML factory package (SLING-2466)
+sling.bootdelegation.jboss = __redirected
+
+# Oracle WebLogic XML factory support (SLING-2466)
+sling.bootdelegation.weblogic = weblogic.xml.*
+
+# IBM WebSphere XML factory support (SLING-2466)
+sling.bootdelegation.ibm = com.ibm.xml.* 
+
 #
 # Package Specifications for org.osgi.framework.system.packages
 #    osgi-core-packages       : OSGi Core Specification packages
