--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,13 @@
             <artifactId>slf4j-api</artifactId>
         </dependency>
         
+        <dependency>
+            <groupId>biz.aQute</groupId>
+            <artifactId>bndlib</artifactId>
+            <version>1.50.0</version>
+            <scope>provided</scope>
+        </dependency>
+        
         <!-- Testing -->
         <dependency>
             <groupId>junit</groupId>
@@ -87,22 +94,13 @@
             <plugin>
                 <groupId>org.apache.felix</groupId>
                 <artifactId>maven-bundle-plugin</artifactId>
+                <version>2.3.7</version>
                 <extensions>true</extensions>
                 <configuration>
                     <instructions>
                         <Bundle-DocURL>
                             http://sling.apache.org/site/sling-api.html
                         </Bundle-DocURL>
-                        <Export-Package>
-                            org.apache.sling.api;version=2.2,
-                            org.apache.sling.api.adapter;version=2.2,
-                            org.apache.sling.api.auth;version=1.0,
-                            org.apache.sling.api.request;version=2.2,
-                            org.apache.sling.api.resource;version=2.1,
-                            org.apache.sling.api.scripting;version=2.1,
-                            org.apache.sling.api.servlets;version=2.1,
-                            org.apache.sling.api.wrappers;version=2.1
-                        </Export-Package>
                         <!-- Require explicit version of the servlet API -->
                         <Import-Package>
                             javax.servlet.*;version=2.4,*
