SLING-2474 Make sure update events for the sling:match property are handled by MapEntries
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1337414 13f79535-47bb-0310-9956-ffa450edef68

--- a/bundles/jcr/resource/pom.xml
+++ b/bundles/jcr/resource/pom.xml
@@ -247,5 +247,11 @@
             <version>2.1.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.felix</groupId>
+            <artifactId>org.apache.felix.framework</artifactId>
+            <version>3.0.8</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
