--- a/pom.xml
+++ b/pom.xml
@@ -75,7 +75,7 @@
                             org.apache.sling.fsprovider.internal
                         </Private-Package>
                         <Import-Package>
-                            org.apache.sling.api.resource;version="[$(version;==;$(@)),$(version;=+;$(@)))",
+                            org.apache.sling.api.resource;provide:=true,
                             *
                         </Import-Package>
                     </instructions>
