SLING-2483 Use provide:=true instead of version macros to define the proper import version range. Also fix a small glitch in the parent pom relativePath of the framework-extension-ws bundle
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1339861 13f79535-47bb-0310-9956-ffa450edef68

--- a/bundles/commons/logservice/pom.xml
+++ b/bundles/commons/logservice/pom.xml
@@ -64,7 +64,7 @@
                             org.apache.sling.commons.logservice.*,
                         </Private-Package>
                         <Import-Package>
-                            org.osgi.service.log;version="[$(version;==;$(@)),$(version;=+;$(@)))",
+                            org.osgi.service.log;provide:=true,
                             *
                         </Import-Package>
                     </instructions>
