--- a/maven/archetypes/servlet/pom.xml
+++ b/maven/archetypes/servlet/pom.xml
@@ -17,6 +17,7 @@
   specific language governing permissions and limitations
   under the License.
 -->
+
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
@@ -66,6 +67,23 @@
                 <artifactId>maven-archetype-plugin</artifactId>
                 <version>2.2</version>
                 <extensions>true</extensions>
+            </plugin>
+            <plugin>
+                <artifactId>maven-antrun-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>fix-crlfs</id>
+                        <phase>process-test-resources</phase>
+                            <configuration>
+                                <target>
+                                    <fixcrlf srcdir="${project.build.testOutputDirectory}" />
+                                </target>
+                            </configuration>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
