SLING-1793 - adding jstl bundle (based on Róbert Csákány's patch and Day bundle)
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1347856 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -155,6 +155,7 @@
         <module>bundles/scripting/javascript</module>
         <module>bundles/scripting/jsp</module>
         <module>bundles/scripting/jsp-taglib</module>
+        <module>bundles/scripting/jsp-jstl</module>
         
         <!-- Extensions -->
         <module>bundles/extensions/adapter</module>
