--- a/contrib/pom.xml
+++ b/contrib/pom.xml
@@ -21,6 +21,12 @@
 
     <modelVersion>4.0.0</modelVersion>
 
+    <parent>
+        <groupId>org.apache</groupId>
+        <artifactId>apache</artifactId>
+        <version>8</version>
+    </parent>
+
     <groupId>org.apache.sling</groupId>
     <artifactId>sling-contrib-builder</artifactId>
     <packaging>pom</packaging>
