SLING-2396 : Add new resourceresolver project
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1350171 13f79535-47bb-0310-9956-ffa450edef68

--- a/bundles/resourceresolver/src/main/resources/OSGI-INF/metatype/metatype.properties
+++ b/bundles/resourceresolver/src/main/resources/OSGI-INF/metatype/metatype.properties
@@ -24,9 +24,9 @@
 # the SCR plugin
 
 #
-# Localizations for JcrResourceResolverFactoryImpl configuration
-resource.resolver.name = Apache Sling JCR Resource Resolver
-resource.resolver.description =  Configures the JCR Resource Resolver for request \
+# Localizations for Resource Resolver Factory configuration
+resource.resolver.name = Apache Sling Resource Resolver Factory
+resource.resolver.description =  Configures the Resource Resolver for request \
  URL and resource path rewriting.
 
 resource.resolver.map.location.name = Mapping Location
@@ -71,8 +71,3 @@ resource.resolver.manglenamespaces.description = Defines whether namespace \
  containing colons, even though they are perfectly valid characters in the \
  path part of URI references with a scheme. The default value of this property \
  if no configuration is provided is "true".
-
-resource.resolver.multiworkspace.name=Enable Multi Workspaces
-resource.resolver.multiworkspace.description=If this is enabled, multiple workspaces are supported \
- This includes registering observation listeners for all workspaces and allows to \
- resolve resources from other workspaces than the default one.
