SLING-2396 : Add new resourceresolver project
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1350173 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,9 @@
         <!-- The Sling API -->
         <module>bundles/api</module>
 
+        <!-- Resource Resolver -->
+        <module>bundles/resourceresolver</module>
+
         <!-- extension fragment bundles -->
         <module>bundles/extensions/framework-extension-transaction</module>
         <module>bundles/extensions/framework-extension-xml</module>
