--- a/pom.xml
+++ b/pom.xml
@@ -168,7 +168,7 @@
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-nop</artifactId>
+            <artifactId>slf4j-simple</artifactId>
             <version>1.5.2</version>
             <scope>test</scope>
         </dependency>
