--- a/pom.xml
+++ b/pom.xml
@@ -105,8 +105,14 @@
                                 javax.xml.xpath;uses:="org.xml.sax,javax.xml.namespace";version="${fragment.xml.version}",
                                 javax.xml;version="${fragment.xml.version}",
                                 org.w3c.dom.bootstrap;uses:="org.w3c.dom";version="${fragment.xml.version}",
+                                org.w3c.dom.css;uses:="org.w3c.dom,org.w3c.dom.stylesheets,org.w3c.dom.views";version="${fragment.xml.version}",
                                 org.w3c.dom.events;uses:="org.w3c.dom,org.w3c.dom.views";version="${fragment.xml.version}",
+                                org.w3c.dom.html;uses:="org.w3c.dom";version="${fragment.xml.version}",
                                 org.w3c.dom.ls;uses:="org.w3c.dom,org.w3c.dom.events,org.w3c.dom.traversal";version="${fragment.xml.version}",
+                                org.w3c.dom.ranges;uses:="org.w3c.dom";version="${fragment.xml.version}",
+                                org.w3c.dom.stylesheets;uses:="org.w3c.dom";version="${fragment.xml.version}",
+                                org.w3c.dom.traversal;uses:="org.w3c.dom";version="${fragment.xml.version}",
+                                org.w3c.dom.views;version="${fragment.xml.version}",
                                 org.w3c.dom;version="${fragment.xml.version}",
                                 org.xml.sax.ext;uses:="org.xml.sax,org.xml.sax.helpers";version="${fragment.xml.version}",
                                 org.xml.sax.helpers;uses:="org.xml.sax";version="${fragment.xml.version}",
