SLING-2515 - adding more packages to the XML fragment
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1352543 13f79535-47bb-0310-9956-ffa450edef68

--- a/bundles/extensions/framework-extension-xml/pom.xml
+++ b/bundles/extensions/framework-extension-xml/pom.xml
@@ -105,8 +105,14 @@
                                 javax.xml.xpath;uses:="org.xml.sax,javax.xml.namespace";version="${fragment.xml.version}",
                                 javax.xml;version="${fragment.xml.version}",
                                 org.w3c.dom.bootstrap;uses:="org.w3c.dom";version="${fragment.xml.version}",
+                                org.w3c.dom.css;uses:="org.w3c.dom,org.w3c.dom.stylesheets,org.w3c.dom.views";version="${fragment.xml.version}",
                                 org.w3c.dom.events;uses:="org.w3c.dom,org.w3c.dom.views";version="${fragment.xml.version}",
+                                org.w3c.dom.html;uses:="org.w3c.dom";version="${fragment.xml.version}",
                                 org.w3c.dom.ls;uses:="org.w3c.dom,org.w3c.dom.events,org.w3c.dom.traversal";version="${fragment.xml.version}",
+                                org.w3c.dom.ranges;uses:="org.w3c.dom";version="${fragment.xml.version}",
+                                org.w3c.dom.stylesheets;uses:="org.w3c.dom";version="${fragment.xml.version}",
+                                org.w3c.dom.traversal;uses:="org.w3c.dom";version="${fragment.xml.version}",
+                                org.w3c.dom.views;version="${fragment.xml.version}",
                                 org.w3c.dom;version="${fragment.xml.version}",
                                 org.xml.sax.ext;uses:="org.xml.sax,org.xml.sax.helpers";version="${fragment.xml.version}",
                                 org.xml.sax.helpers;uses:="org.xml.sax";version="${fragment.xml.version}",
