--- a/bundles/extensions/framework-extension-ws/pom.xml
+++ b/bundles/extensions/framework-extension-ws/pom.xml
@@ -23,7 +23,7 @@
     <parent>
         <groupId>org.apache.sling</groupId>
         <artifactId>sling</artifactId>
-        <version>13-SNAPSHOT</version>
+        <version>12</version>
         <relativePath>../../../parent/pom.xml</relativePath>
     </parent>
 
@@ -41,6 +41,12 @@
         extension fragment adapted to the platform or to install
         regular API packages as bundles.
     </description>
+
+    <scm>
+        <connection>scm:svn:http://svn.apache.org/repos/asf/sling/trunk/bundles/extensions/framework-extension-ws</connection>
+        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/sling/trunk/bundles/extensions/framework-extension-ws</developerConnection>
+        <url>http://svn.apache.org/viewvc/sling/trunk/bundles/extensions/framework-extension-ws</url>
+    </scm>
 
     <properties>
         <fragment.ws.version>0.0.0.fragment_ws</fragment.ws.version>
