SLING-2363 Replace JavaDoc SCR annotations with Java SCR annotations
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1356366 13f79535-47bb-0310-9956-ffa450edef68

--- a/bundles/servlets/resolver/pom.xml
+++ b/bundles/servlets/resolver/pom.xml
@@ -141,5 +141,9 @@
             <groupId>org.jmock</groupId>
             <artifactId>jmock-junit4</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.felix</groupId>
+            <artifactId>org.apache.felix.scr.annotations</artifactId>
+        </dependency>
     </dependencies>
 </project>
