SLING-2363 : Replace JavaDoc SCR annotations with Java SCR annotations
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1357127 13f79535-47bb-0310-9956-ffa450edef68

--- a/contrib/commons/fsclassloader/pom.xml
+++ b/contrib/commons/fsclassloader/pom.xml
@@ -91,5 +91,9 @@
             <version>1.2.0</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.felix</groupId>
+            <artifactId>org.apache.felix.scr.annotations</artifactId>
+        </dependency>
     </dependencies>
 </project>
