--- a/contrib/commons/html/pom.xml
+++ b/contrib/commons/html/pom.xml
@@ -87,5 +87,9 @@
             <artifactId>tagsoup</artifactId>
             <version>1.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.felix</groupId>
+            <artifactId>org.apache.felix.scr.annotations</artifactId>
+        </dependency>
     </dependencies>
 </project>
