SLING-2363 : Replace JavaDoc SCR annotations with Java SCR annotations
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1357132 13f79535-47bb-0310-9956-ffa450edef68

--- a/contrib/extensions/apt/parser/pom.xml
+++ b/contrib/extensions/apt/parser/pom.xml
@@ -92,5 +92,9 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.felix</groupId>
+            <artifactId>org.apache.felix.scr.annotations</artifactId>
+        </dependency>
     </dependencies>
 </project>
