--- a/contrib/extensions/apt/servlet/pom.xml
+++ b/contrib/extensions/apt/servlet/pom.xml
@@ -76,5 +76,9 @@
       <groupId>javax.servlet</groupId>
       <artifactId>servlet-api</artifactId>
     </dependency>
+        <dependency>
+            <groupId>org.apache.felix</groupId>
+            <artifactId>org.apache.felix.scr.annotations</artifactId>
+        </dependency>
   </dependencies>
 </project>
