SLING-2363 : Replace JavaDoc SCR annotations with Java SCR annotations
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1357142 13f79535-47bb-0310-9956-ffa450edef68

--- a/contrib/scripting/jst/pom.xml
+++ b/contrib/scripting/jst/pom.xml
@@ -155,5 +155,9 @@
             <version>2.0.4-incubator</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.felix</groupId>
+            <artifactId>org.apache.felix.scr.annotations</artifactId>
+        </dependency>
     </dependencies>
 </project>
