SLING-2363 : Replace JavaDoc SCR annotations with Java SCR annotations
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1357150 13f79535-47bb-0310-9956-ffa450edef68

--- a/samples/path-based-rtp/pom.xml
+++ b/samples/path-based-rtp/pom.xml
@@ -130,6 +130,10 @@
             <artifactId>slf4j-simple</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.felix</groupId>
+            <artifactId>org.apache.felix.scr.annotations</artifactId>
+        </dependency>
 
     </dependencies>
 </project>
