--- a/samples/espblog/pom.xml
+++ b/samples/espblog/pom.xml
@@ -94,6 +94,10 @@
       <artifactId>slf4j-api</artifactId>
       <scope>provided</scope>
     </dependency>
+        <dependency>
+            <groupId>org.apache.felix</groupId>
+            <artifactId>org.apache.felix.scr.annotations</artifactId>
+        </dependency>
   </dependencies>
   
 </project>
