SLING-2528 : Allow resources to be queried from the OSGi Installer service
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1363303 13f79535-47bb-0310-9956-ffa450edef68

--- a/installer/core/pom.xml
+++ b/installer/core/pom.xml
@@ -61,6 +61,7 @@
                         </DynamicImport-Package>
 						<Export-Package>
 							org.apache.sling.installer.api;version=3.1.0,
+                            org.apache.sling.installer.api.info;version=1.0.0,
                             org.apache.sling.installer.api.event;version=1.0.0,
                             org.apache.sling.installer.api.tasks;version=1.2.0
                         </Export-Package>
