New MongoDB resource provider
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1368140 13f79535-47bb-0310-9956-ffa450edef68

--- a/contrib/pom.xml
+++ b/contrib/pom.xml
@@ -94,6 +94,7 @@
           <module>extensions/gwt/servlet</module>
           <module>extensions/i18n</module>
           <module>extensions/obr</module>
+          <module>extensions/mongodb</module>
           <module>extensions/reqanalyzer</module>
           <module>extensions/rewriter</module>
           <module>jcr/jackrabbit-client</module>
