SLING-2557 - accept later versions of javax.jcr
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1370371 13f79535-47bb-0310-9956-ffa450edef68

--- a/samples/path-based-rtp/pom.xml
+++ b/samples/path-based-rtp/pom.xml
@@ -62,6 +62,10 @@
                         <Private-Package>
                             org.apache.sling.samples.pathbasedrtp
                         </Private-Package>
+                        <Import-Package>
+                            javax.jcr.*;version=1.0,
+                            *
+                        </Import-Package>
                     </instructions>
                 </configuration>
             </plugin>
