SLING-2545 : Scripting jst is using wrong import package directives
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1372292 13f79535-47bb-0310-9956-ffa450edef68

--- a/contrib/scripting/jst/pom.xml
+++ b/contrib/scripting/jst/pom.xml
@@ -74,6 +74,8 @@
                         </Private-Package>
                         
                         <Import-Package>
+                            org.w3c.dom,
+                            org.w3c.dom.html,
                             org.apache.bsf.*;
                             org.apache.xml.serialize;
                             sun.misc; resolution:=optional,
