Fix mvn warning: replace build.testOutputDirectory with project.build.testOutputDirectory
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1376842 13f79535-47bb-0310-9956-ffa450edef68

--- a/launchpad/base/pom.xml
+++ b/launchpad/base/pom.xml
@@ -60,9 +60,9 @@
                             <target name="build">
                                 <taskdef resource="aQute/bnd/ant/taskdef.properties"
                                     classpathref="maven.plugin.classpath" />
-                                <bnd classpath="${build.testOutputDirectory}" failok="false"
+                                <bnd classpath="${project.build.testOutputDirectory}" failok="false"
                                     exceptions="true" files="src/test/resources/test1.bnd"
-                                    output="${build.testOutputDirectory}" />
+                                    output="${project.build.testOutputDirectory}" />
                             </target>
                         </configuration>
                         <goals>
