Don't try to build test bundles if test classes are not built due to maven.test.skip=true
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1376846 13f79535-47bb-0310-9956-ffa450edef68

--- a/launchpad/base/pom.xml
+++ b/launchpad/base/pom.xml
@@ -52,11 +52,13 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-antrun-plugin</artifactId>
+                <version>1.7</version>
                 <executions>
                     <execution>
                         <id>testbundles</id>
                         <phase>process-test-classes</phase>
                         <configuration>
+                            <skip>${maven.test.skip}</skip>
                             <target name="build">
                                 <taskdef resource="aQute/bnd/ant/taskdef.properties"
                                     classpathref="maven.plugin.classpath" />
