Add new console bundle to build
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1376864 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -180,6 +180,7 @@
         
         <!-- Installer -->
         <module>installer/core</module>
+        <module>installer/console</module>
         <module>installer/providers/file</module>
         <module>installer/providers/jcr</module>
         <module>installer/factories/configuration</module>
