SLING-2579 : ResourceResolverFactory should only be available if specific ResourceProvider/Factories are registered
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1376960 13f79535-47bb-0310-9956-ffa450edef68

--- a/bundles/resourceresolver/src/main/resources/OSGI-INF/metatype/metatype.properties
+++ b/bundles/resourceresolver/src/main/resources/OSGI-INF/metatype/metatype.properties
@@ -71,3 +71,9 @@ resource.resolver.manglenamespaces.description = Defines whether namespace \
  containing colons, even though they are perfectly valid characters in the \
  path part of URI references with a scheme. The default value of this property \
  if no configuration is provided is "true".
+
+resource.resolver.required.providers.name = Required Providers
+resource.resolver.required.providers.description = A resource resolver factory is only \
+ available (registered) if all resource providers mentioned in this configuration \
+ are available. Each entry is either a service PID or a filter expression. \
+ Invalid filters are ignored.
