SLING-2311 - adding small performance test suite. Based heavily on the work of Antonio Sanso and the Jackrabbit team (Thanks!!!)
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1377819 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -245,6 +245,13 @@
                 <module>contrib</module>
             </modules>
         </profile>
+         <!-- Profile for including performan tests -->
+        <profile>
+            <id>withPerformanceTest</id>
+            <modules>
+                <module>performance</module>
+            </modules>
+        </profile>
     </profiles>
 
 </project>
