SLING-2544 - adding ResourceResolverTest back in as an integration test (thanks to Antonio Sanso for getting this started!)
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1378407 13f79535-47bb-0310-9956-ffa450edef68

--- a/launchpad/testing/pom.xml
+++ b/launchpad/testing/pom.xml
@@ -547,5 +547,10 @@
             <artifactId>servlet-api</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.osgi</groupId>
+            <artifactId>org.osgi.compendium</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
