SLING-2527 : Make api version configurable and use correct version
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1392221 13f79535-47bb-0310-9956-ffa450edef68

--- a/installer/it/pom.xml
+++ b/installer/it/pom.xml
@@ -87,6 +87,10 @@
                             <value>${project.version}</value>
                         </property>
                         <property>
+                            <name>installer.api.version</name>
+                            <value>1.0-SNAPSHOT</value>
+                        </property>
+                        <property>
                             <name>installer.configuration.version</name>
                             <value>1.0.9-SNAPSHOT</value>
                         </property>
