SLING-2570 :  Use Wiring API to check whether Installer Core bundle is affect by a bundle update
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1394154 13f79535-47bb-0310-9956-ffa450edef68

--- a/installer/core/pom.xml
+++ b/installer/core/pom.xml
@@ -57,6 +57,17 @@
 						<Private-Package>
 						    org.apache.sling.installer.core.impl.*
 						</Private-Package>
+				     <!-- 
+				        As we make use of optional features from 4.3 if they
+				        are available, we have to add the framework imports 
+				        by hand:
+				     -->
+				        <Import-Package>
+				            org.osgi.framework;version="[1.4,2]",
+				            org.osgi.framework.wiring;resolution:=optional,
+				            *
+				        </Import-Package>
+				        <Export-Package>!*</Export-Package>
                         <Embed-Dependency>
                             org.apache.felix.configadmin;inline="org/apache/felix/cm/file/ConfigurationHandler.*",
                             org.osgi.compendium;inline="org/osgi/util/tracker/*",
@@ -116,6 +127,7 @@
         <dependency>
             <groupId>org.osgi</groupId>
             <artifactId>org.osgi.core</artifactId>
+            <version>4.1.0</version>
         </dependency>
         <dependency>
             <groupId>org.osgi</groupId>
