SLING-2618 - allowing the default session availability to be configured
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1396762 13f79535-47bb-0310-9956-ffa450edef68

--- a/bundles/scripting/jsp/src/main/resources/OSGI-INF/metatype/metatype.properties
+++ b/bundles/scripting/jsp/src/main/resources/OSGI-INF/metatype/metatype.properties
@@ -63,3 +63,7 @@ jasper.trimSpaces.description = Should white spaces in template text between \
 jasper.displaySourceFragments.name = Display Source Fragments
 jasper.displaySourceFragments.description = Should we include a source fragment \
  in exception messages, which could be displayed to the developer
+
+default.is.session.name = Default Session Value
+default.is.session.description = Should a session be created by default for every \
+ JSP page?
