SLING-2618 - make the metatype description more frightening
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1397096 13f79535-47bb-0310-9956-ffa450edef68

--- a/bundles/scripting/jsp/src/main/resources/OSGI-INF/metatype/metatype.properties
+++ b/bundles/scripting/jsp/src/main/resources/OSGI-INF/metatype/metatype.properties
@@ -66,4 +66,5 @@ jasper.displaySourceFragments.description = Should we include a source fragment 
 
 default.is.session.name = Default Session Value
 default.is.session.description = Should a session be created by default for every \
- JSP page?
+ JSP page? Warning - this behavior may produce unintended results and changing \
+ it will not impact previously-compiled pages.
