SLING-2564 - adding JMX monitoring of Sling Thread Pools
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1399878 13f79535-47bb-0310-9956-ffa450edef68

--- a/bundles/commons/threads/pom.xml
+++ b/bundles/commons/threads/pom.xml
@@ -58,7 +58,8 @@
                             org.apache.sling.commons.threads.impl.Activator
                         </Bundle-Activator>
                         <Export-Package>
-                            org.apache.sling.commons.threads;version=3.2.0
+                            org.apache.sling.commons.threads;version=3.2.0,
+                            org.apache.sling.commons.threads.jmx;version=1.0.0
                         </Export-Package>
                         <Private-Package>
                             org.apache.sling.commons.threads.impl
