SLING-2632 - creating archetype for taglib
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1402343 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,7 @@
         <module>maven/archetypes/servlet</module>
         <module>maven/archetypes/bundle</module>
         <module>maven/archetypes/bundle-for-jcrinstall</module>
+        <module>maven/archetypes/taglib</module>
 
         <!-- The Sling API -->
         <module>bundles/api</module>
