SLING-2636 - [Tooling] Add ability to Import from Sling Repository. Applying patch from Dan Kico!
git-svn-id: https://svn.apache.org/repos/asf/sling/whiteboard/asanso/plugins/eclipse@1403719 13f79535-47bb-0310-9956-ffa450edef68

--- a/slingclipse-plugin/plugin.xml
+++ b/slingclipse-plugin/plugin.xml
@@ -24,5 +24,22 @@
             class="org.apache.sling.slingclipse.SlingclipseStrartup">
       </startup>
    </extension>
+   <extension
+         point="org.eclipse.ui.importWizards">
+      <category
+            id="org.apache.sling.slingclipse.ui.wizards.sampleCategory"
+            name="Sling">
+      </category>
+      <wizard
+            category="org.apache.sling.slingclipse.ui.wizards.sampleCategory"
+            class="org.apache.sling.slingclipse.ui.wizards.ImportWizard"
+            icon="icons/sample.gif"
+            id="org.apache.sling.slingclipse.ui.wizards.ImportWizard"
+            name="Import from Repository">
+         <description>
+            Import a file from the local file system into the workspace.
+         </description>
+      </wizard>
+   </extension>
 
 </plugin>
